fix: prevent images from blurring up on load

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,13 +23,6 @@
     color: $text-primary;
     display: flex;
     text-decoration: none;
-
-    .gatsby-image-wrapper {
-      flex-basis: 50px;
-      flex-grow: 0;
-      flex-shrink: 0;
-      margin-right: 20px;
-    }
   }
 
   .tagline {
